--- a/events.html
+++ b/events.html
@@ -26,6 +26,13 @@
         <a class="navbar-brand" href="#">
             <img src="img/slipiglogo.png" alt="The Slip Bar and Eatery" />
             </a>
+            <div class="social-links">
+                <a href="https://www.facebook.com/theslipbar/" target="_blank">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a href="https://www.instagram.com/theslipbar/" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -147,15 +154,11 @@
   
     <footer class="footer">
             <div class="social-links">
-                <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                    <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/theslipbar/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-        </div>
+                <br>    
         <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
         <p>info@theslipbar.com</p>
+        </div>
+        <br>
     </footer>
 
     <script src="page.js"></script>
