--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <a class="navbar-brand" href="#">
             <img src="img/slipiglogo.png" alt="The Slip Bar and Eatery" />
             </a>
+            <div class="social-links">
+                <a href="https://www.facebook.com/theslipbar/" target="_blank">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a href="https://www.instagram.com/theslipbar/" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,9 +82,9 @@
         <header>
             <div class = "carousel-container">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="locations-container"> 
-
+                    <div class="locations-container">
                         <section id="locations">
+                               <i class="fas fa-map-marker-alt"></i>
                             <div class="location">
                                 <style> 
                                     span {font-family: "Big Shoulders Text", cursive; 
@@ -298,16 +305,11 @@
 
         <footer class="footer">
             <div class="social-links">
-                <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                    <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/theslipbar/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-        </div>
-        <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
-        <p>info@theslipbar.com</p>
-    </footer>
+              <br>
+            <p style="color: white; font-size: 14px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
+            <p style="color: white; font-size: 14px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif"></p>info@theslipbar.com</p>  
+            </div>   
+      </footer>
 
     <script src="page.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
