--- a/about.html
+++ b/about.html
@@ -21,6 +21,13 @@
         <a class="navbar-brand" href="#">
             <img src="img/slipiglogo.png" alt="The Slip Bar and Eatery" />
             </a>
+            <div class="social-links">
+              <a href="https://www.facebook.com/theslipbar/" target="_blank">
+                  <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="https://www.instagram.com/theslipbar/" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+              </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,6 +68,7 @@
 
     <section class="about-section">
       <article>
+        <h1>Our Story</h1>
         <p>
           Whether the waterfront in Redondo Beach or in the cozy neighborhood nook of Lomita, we are a friendly local spot specializing in craft and locally brewed beers, spirits, and delicious eats!</p>
           <br>
@@ -74,16 +82,13 @@
 
 
     <footer class="footer">
-            <div class="social-links">
-                <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                    <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/theslipbar/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-        </div>
+      <div class="social-links">
+        <br>
+
         <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
         <p>info@theslipbar.com</p>
+      </div>
+      <br>
     </footer>
 
     <script src="page.js"></script>
