--- a/contact.html
+++ b/contact.html
@@ -1,57 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <link rel="stylesheet" href="css/index.css" />
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <!-- Font Awesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/css/all.min.css">
+    <script src="page.js"></script>
 
-    <title>Contact Us</title>
-  </head>
-  <body>
-    <header>
-      <h1>Get in Touch</h1>
-    </header>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/slipiglogo.png" alt="The Slip Bar and Eatery" />
+            </a>
+            <div class="social-links">
+              <a href="https://www.facebook.com/theslipbar/" target="_blank">
+                  <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="https://www.instagram.com/theslipbar/" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+              </a>
+              
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Merch.html">Merch</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="jobs.html">Jobs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+            <div class="nav-links">
+                <!-- Dropdown menu items go here -->
+            </div>
+    <script>
+            function toggleNav() {
+                const navLinks = document.querySelector('.nav-links');
+                navLinks.classList.toggle('show');
+            }
+        </script>
+
+    <section class="about-section">
+      <article>
+        <p>
+          Get in touch with us! We'd love to hear from you.
+        </p>
+      </article>
+    </section>
+
 
     <footer class="footer">
-      <div class="social-links">
-        <a href="https://www.facebook.com/theslipbar/" target="_blank">
-          <i class="fab fa-facebook"></i>
-        </a>
-        <a href="https://www.instagram.com/theslipbar/" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="mailto: info@theslipbar.com>" <i class="fa-regular fa-envelope"></i>
-          </a>
-      </div>
-      <div class="footer-links">
-        <a href="index.html">Home</a>
-        <a href="Merch.html">Merch</a>
-        <a href="jobs.html">Jobs</a>
-        <a href="contact.html">Contact</a>
-        <a href="events.html">Events</a>
-      </div>
-      <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
-      <p>info@theslipbar.com</p>
+            <div class="social-links">
+                <a href="https://www.facebook.com/theslipbar/" target="_blank">
+                    <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/theslipbar/" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
+        <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
+        <p>info@theslipbar.com</p>
     </footer>
-  </body>
+
+    <script src="page.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
