--- a/jobs.html
+++ b/jobs.html
@@ -1,107 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
+    <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <link rel="stylesheet" href="css/index.css" />
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <!-- Font Awesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/css/all.min.css">
+    <script src="page.js"></script>
 
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index.css" />
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/slipiglogo.png" alt="The Slip Bar and Eatery" />
+            </a>
+            <div class="social-links">
+              <a href="https://www.facebook.com/theslipbar/" target="_blank">
+                  <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="https://www.instagram.com/theslipbar/" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+              </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Merch.html">Merch</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="jobs.html">Jobs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-    <title>jobs</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-      }
+            <div class="nav-links">
+                <!-- Dropdown menu items go here -->
+            </div>
+    <script>
+            function toggleNav() {
+                const navLinks = document.querySelector('.nav-links');
+                navLinks.classList.toggle('show');
+            }
+        </script>
 
-      .container {
-        width: 80%;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        box-sizing: border-box;
-      }
-
-      form {
-        display: flex;
-        flex-direction: column;
-      }
-
-      label {
-        margin-bottom: 8px;
-        color: #333;
-      }
-
-      input,
-      select,
-      textarea {
-        padding: 10px;
-        margin-bottom: 16px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-      }
-
-      button {
-        background-color: #007bff;
-        color: #fff;
-        padding: 12px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background-color: #0056b3;
-      }
-    </style>
-  </head>
+  
   <body>
-    <div class="container">
-      <p>Come Join Us!</p>
+    <h1>Join Our Team</h1>
+    <div class="form-container">
       <form
         action="mailto:info@theslipbar.com"
         method="post"
         enctype="text/plain"
       >
-        <label for="fullName">Full Name:</label>
-        <input type="text" id="fullName" name="fullName" required />
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
-
-        <label for="phone">Phone Number:</label>
-        <input type="tel" id="phone" name="phone" required />
-
         <label for="position">Position Applied For:</label>
         <input type="text" id="position" name="position" required />
 
@@ -125,19 +98,18 @@
         ></textarea>
 
         <button type="submit">Submit Application</button>
+      
       </form>
-      <br>
-  <footer class="footer">
-        <div class="social-links">
-            <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                <i class="fab fa-facebook"></i>
-        </a>
-        <a href="https://www.instagram.com/theslipbar/" target="_blank">
-            <i class="fab fa-instagram"></i>
-        </a>
     </div>
-    <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
-    <p>info@theslipbar.com</p>
+    <br>
+  </body>
+  <footer class="footer">
+    <div class="social-links">
+      <br>
+    <p style="color: white; font-size: 14px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
+    <p style="color: white; font-size: 14px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif"></p>info@theslipbar.com</p>
+    <br>  
+    </div>   
 </footer>
 
 <script src="page.js"></script>
