--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -21,6 +21,13 @@
         <a class="navbar-brand" href="#">
             <img src="img/slipiglogo.png" alt="The Slip Bar and Eatery" />
             </a>
+            <div class="social-links">
+              <a href="https://www.facebook.com/theslipbar/" target="_blank">
+                  <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="https://www.instagram.com/theslipbar/" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+              </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,7 +82,7 @@
                         <h1> The Slip Redondo Beach</h1>
                         <a href="https://goo.gl/maps/3Z6Z9" target="_blank">
                             <div class="location-link" id="directions-btn">
-                                <i class="fas fa-map-marker-alt"></i>
+                              <i class="fa-sharp fa-solid fa-location-arrow"></i>
                                 120 N International Boardwalk, Redondo Beach, CA 90277
                             </div>
                         </a>
@@ -143,7 +150,7 @@
       <img src="./menus/redondomenupage1.jpg" type="application/pdf" width="100%" height="600px" /> 
   
     </div>
-    </section>
+    </div>
     <!-- </div>
         <p>
           DRINKS MENU
@@ -160,21 +167,19 @@
       </article>
     </section>
      -->
+    </section>
+  </body>
 
 
-
-    <footer class="footer">
-            <div class="social-links">
-                <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                    <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/theslipbar/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
+  <footer class="footer">
+        <div class="social-links">
+          <br>
+        <p style="color: white; font-size: 14px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
+        <p style="color: white; font-size: 14px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif"></p>info@theslipbar.com</p>  
         </div>
-        <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
-        <p>info@theslipbar.com</p>
-    </footer>
+        <br>   
+  </footer>
+  </footer>
 
     <script src="page.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
