--- a/contact.html
+++ b/contact.html
@@ -68,26 +68,21 @@
         </script>
 
     <section class="about-section">
-      <article>
-        <p>
-          Get in touch with us! We'd love to hear from you.
-        </p>
-      </article>
+        <h1>Get in Touch!</h1>
+        <p>Have a question or comment? We'd love to hear from you. Send us a message via email or social media!</p>
     </section>
 
 
+
     <footer class="footer">
-            <div class="social-links">
-                <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                    <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/theslipbar/" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-        </div>
-        <p>© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
-        <p>info@theslipbar.com</p>
-    </footer>
+        <div class="social-links">
+          <br>
+        <p style="color: white; font-size: 14px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">© 2024 The Slip Bar and Eatery. All Rights Reserved.</p>
+        <p style="color: white; font-size: 14px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif"></p>info@theslipbar.com</p>  
+        <br>
+            
+    </div>   
+  </footer>
 
     <script src="page.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
