--- a/events.html
+++ b/events.html
@@ -46,6 +46,9 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html">Locations</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="merch.html">Merch</a>
                     </li>
                     <li class="nav-item">
