--- a/about.html
+++ b/about.html
@@ -41,7 +41,10 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Merch.html">Merch</a>
+                        <a class="nav-link" href="index.html">Locations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="merch.html">Merch</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="jobs.html">Jobs</a>
