made @ a smaller size on banner

--- a/lomita.html
+++ b/lomita.html
@@ -71,7 +71,7 @@
     
                     <div class="locations-container">
                       <div class="location">
-                        <h1> The Slip Lomita</h1>
+                        <h1> The Slip<span style="font-size: .5em">@Lomita</span></h1>
                         <a href="https://goo.gl/maps/3Z6Z9  " target="_blank">
                           <div class="location-link" id="directions-btn">
                             <i class="fa-sharp fa-solid fa-location-arrow"></i>
