made @ a smaller font in the banner

--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -79,7 +79,7 @@
                     <div class="locations-container">
                       <div class="location">
                         
-                        <h1> The Slip Redondo Beach</h1>
+                        <h1> The Slip<span style="font-size: .5em">@Redondo Beach</span></h1>
                         <a href="https://goo.gl/maps/3Z6Z9" target="_blank">
                             <div class="location-link" id="directions-btn">
                               <i class="fa-sharp fa-solid fa-location-arrow"></i>
