--- a/lomita.html
+++ b/lomita.html
@@ -114,9 +114,21 @@
     </div>
 
 
-
     <section class="about-section">
       <article>
+        <h2> Address:</h2>
+        <p>503 Narbonne Ave, Lomita, CA 90717<</p>
+        <div class="location">
+          <a href="https://goo.gl/maps/3Z6Z9" target="_blank">
+              <div class="location-link" id="directions-btn">
+                <i class="fa-sharp fa-solid fa-location-arrow"></i>
+                  Get Directions
+              </div>
+            </a>
+            <br>
+    
+
+      </div>
         <h2> Phone:</h2>
         <p> 
           424.376.6947
