--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -78,7 +78,7 @@
     
                     <div class="locations-container">
                       <div class="location">
-                        <h1>THE SLIP @Redondo Beach<h1>
+                        <h1> The Slip<span style="font-size: .5em">@Redondo Beach</span></h1>
                           <!-- <p><span style="font-size: .5em;">@Redondo Beach</span></p> -->
                     </div>
                     
