--- a/lomita.html
+++ b/lomita.html
@@ -114,7 +114,7 @@
     <section class="about-section">
       <article>
         <h2> Address:</h2>
-        <p>503 Narbonne Ave, Lomita, CA 90717<</p>
+        <p>503 Narbonne Ave, Lomita, CA 90717</p>
         <div class="location">
           <a href="https://goo.gl/maps/3Z6Z9" target="_blank">
               <div class="location-link" id="directions-btn">
